# cloud-storage-api

./: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/auth/: dependencies.py  dtos.py  exceptions.py  repositories.py  router.py  schemas.py  services.py  types.py
app/core/: config.py  database.py  dependencies.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py  redis.py  s3.py  schemas.py  security.py  types.py
app/users/: dependencies.py  exceptions.py  models.py  repositories.py  router.py  schemas.py  schemes.py  services.py
migrations/: env.py
migrations/versions/: 2026_01_05_0124-d3b4d448aa92_create_user_table.py  2026_01_18_1927-5fff5024963d_initial_structure_with_uuid.py
tests/: conftest.py  test_infrastructure.py  types.py
tests/api/: test_auth.py  test_users.py
