[project]
name = "cloud-storage-api"
version = "0.1.0"
description = "Cloud Storage API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.ruff]
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "migrations",
]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
]
